--- a/calendario.html
+++ b/calendario.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home</title>
+    <title>calendario</title>
   </head>
   <link rel="stylesheet" href="global.css" />
   <link rel="stylesheet" href="css.css" />
-  <script src="mainload.js" defer></script>
-
   <body>
     <div class="megacontainer">
       <div class="rettangolo barralaterale">
@@ -62,8 +60,8 @@
       <div class="centro">
         <div class="partesopra">
           <div class="dashboardtext">
-            <h4>Home / Dashboard</h4>
-            <h1>Main Dashboard</h1>
+            <h4>Home / Calendario</h4>
+            <h1>Calendario</h1>
           </div>
           <div class="rettangolo account">
             <div class="input">
@@ -79,7 +77,7 @@
                   d="M416 208c0 45.9-14.9 88.3-40 122.7L502.6 457.4c12.5 12.5 12.5 32.8 0 45.3s-32.8 12.5-45.3 0L330.7 376c-34.4 25.2-76.8 40-122.7 40C93.1 416 0 322.9 0 208S93.1 0 208 0S416 93.1 416 208zM208 352a144 144 0 1 0 0-288 144 144 0 1 0 0 288z"
                 />
               </svg>
-              <input placeholder="search" class="inputIn" id="searchIn" />
+              <input placeholder="search" class="inputIn" />
             </div>
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -114,18 +112,6 @@
                 d="M256 512A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM216 336h24V272H216c-13.3 0-24-10.7-24-24s10.7-24 24-24h48c13.3 0 24 10.7 24 24v88h8c13.3 0 24 10.7 24 24s-10.7 24-24 24H216c-13.3 0-24-10.7-24-24s10.7-24 24-24zm40-208a32 32 0 1 1 0 64 32 32 0 1 1 0-64z"
               />
             </svg>
-          </div>
-        </div>
-        <div class="rettangolo recenti">
-          <h1>Recenti</h1>
-          <!-- js -->
-          <div id="contenitore" class="containerrecenti">
-            <!-- <div class="containerinfo">
-              <img src="" class="img" />
-              <h3>asdasd</h3>
-              <h3>10:20 Am</h3>
-              <h3>+ 100</h3>
-            </div> -->
           </div>
         </div>
       </div>
